    * fixed an issue with data display.
    * the syncing function now works with all users.
    * sensor dict is now used properly in all threads collecting data.
    * fixed an issue preventing the deletion of a sensor in BME280 window
    * msl pressure was missing from the variable dict when no sensor is connected.
    * the address button of the mqtt managers was not connected to a function.

### March 5 2021, Release version 0.10.1 ###

  * FIXED:
    * fixed an issue with the update system.

  * ADDED:
    * logging messages have been added in the update system.


### March 5 2021, Release version 0.10.0 ###

  * ADDED:
    * OpenWeather has been added as a weather forecast provider.
    * a new version of the option window has been introduced.
    * meteofrance api and openweather api versions have been added to log.

  * MODIFIED:
    * Openweather has been integrated in all widgets.
    * stylesheet has been tweaked in option window.


### March 2 2021, Release version 0.9.3 ###

  * ADDED:
    * a function to sync graphic materials has been added (to avoid icons and stylesheet issues).

  * FIXED:
    * fixed an issue with paho mqtt disconnect callback.
    * if battery and/or signal values are None, it leads to an exception, it has been fixed.
    * if a sensor is not detected, the corresponding thread is stopped.
    * fixed an issue with the display of min max temperature.


### March 1 2021, Release version 0.9.2 ###

  * ADDED:
    * a function to test postgresql server, database and tables has been added.

  * MODIFIED:
    * time series are plotted only if a connection to the database is successful.
    * the function to test postgresql server, database and tables is now connected to mainwindow, it will
    control the display of data and time series, and the work of sensors.
    * the info window has been modified for better handling.
    * code has been cleaned.
    * logging messages have been cleaned.